--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,6 +19,9 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <form action="/logout" class="form-signin" method="get">
+                    <button class="btn btn-outline-success " type="submit">Logout</button>
+                </form>
             </div>
         </div>
     </nav>
