Add flag to switch on/off kafka istead commented blocks, Delete deprecated thymeleaf expressions

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div th:include="fragments/navbar :: #navbar"></div>
+<div th:insert="~{fragments/navbar :: #navbar}"></div>
 
 <table class="table">
     <thead>
