--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<div id="navbar">
+<div id="navbar" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="books.html" th:href="@{/api/books}">BookShop</a>
@@ -12,7 +12,7 @@
                         <a class="nav-link active" href="orders.html" th:href="@{/api/orders}">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="orders.html" th:href="@{/api/myorders}"> <span th:text="${username}"></span></a>
+                        <a class="nav-link" sec:authentication="principal.usernameAndRole"></a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
