--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Bookshop login</title>
+    <title>Bookshop sign up</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
     <style>
@@ -16,11 +16,11 @@
 </head>
 <body>
 <div class="container">
-    <form class="form-signin" method="post" action="/login">
-        <h2 class="form-signin-heading text-center">Login to Bookshop</h2>
+    <form class="form-signin" method="post" action="/registration">
+        <h2 class="form-signin-heading text-center">Sign up to Bookshop</h2>
         <p>
             <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+            <input type="text" id="username" name="login" class="form-control" placeholder="Username" required="" autofocus="">
         </p>
         <p>
             <label for="password" class="sr-only">Password</label>
@@ -30,10 +30,8 @@
             <h6 class="text-center">Remember me?</h6>
             <input type="checkbox" id="remember-me" name="remember-me" class="form-control">
         </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-        <span> Not registered ?
-            <a th:href="@{/registration}">Signup here</a>
-        </span>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+        <span>Already registered? <a th:href="@{/login}">Login here</a></span>
     </form>
 </div>
 </body></html>
