--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -6,11 +6,11 @@
     <title>Bookshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ad9809c437.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
-
 <table class="table">
     <thead>
     <tr>
