--- a/src/main/resources/templates/book-form.html
+++ b/src/main/resources/templates/book-form.html
@@ -6,21 +6,19 @@
     <title>Bookshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<!--    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
-<!--    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
 </head>
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
 
-<form class="row g-3 border border-secondary rounded p-3" th:action="@{book/save}" method="post" th:object="${book}" style="max-width: 700px; margin: 0 auto">
+<form class="row g-3 border border-secondary rounded m-5" th:action="@{../book/save}" method="post" th:object="${book}" style="max-width: 700px">
     <h3 class="text-center">Add new book</h3>
     <div class="row g-3">
         <div class="col-3">
-            <label for="author" class="col-sm-4 col-form-label">Author</label>
+            <label class="col-sm-4 col-form-label">Author</label>
         </div>
         <div class="col-9">
-            <input type="text" id="author" class="form-control" th:field="*{author}" required minlength="3" maxlength="25">
+            <input type="text" class="form-control" th:field="*{author}" required minlength="3" maxlength="25">
         </div>
     </div>
     <div class="row g-3">
@@ -49,17 +47,9 @@
     </div>
     <div class="text-center">
         <button type="submit" value="Submit"  class="btn btn-primary btn-lg m-3">Submit</button>
-        <button type="button" value="Cancel" class="btn btn-secondary btn-lg" id="buttonCancel">Cancel</button>
+        <button type="button" value="Cancel" class="btn btn-secondary btn-lg"> <a class="text-white text-decoration-none" th:href="@{/api/books}">Cancel</a></button>
     </div>
 </form>
-
-<script type="text/javascript">
-    $(document).ready(function() {
-        $("#buttonCancel").on("click", function () {
-            window.location = "[[@{/api/books}]]";
-        })
-    })
-</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
