--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,6 +6,7 @@
     <title>Bookshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ad9809c437.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -23,18 +24,30 @@
         <th scope="col">Title</th>
         <th scope="col">Year</th>
         <th scope="col">Price</th>
+        <th th:if="${#authentication.principal.editor}" scope="col"></th>
     </tr>
     </thead>
     <tbody>
-        <tr th:each="book: ${books}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.author}"></td>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.year}"></td>
-            <td th:text="${book.price}"></td>
-        </tr>
+    <tr th:each="book: ${books}">
+        <td th:text="${book.id}"></td>
+        <td th:text="${book.author}"></td>
+        <td th:text="${book.title}"></td>
+        <td th:text="${book.year}"></td>
+        <td th:text="${book.price}"></td>
+        <td th:if="${#authentication.principal.editor}"><div>
+            <i class="fa-solid fa-pen-to-square fa-2x mx-4"></i>
+            <a th:href="@{'book/delete/' + ${book.id}}"> <i class="fa-solid fa-trash fa-2x" title="Delete this book"></i></a>
+        </div></td>
+    </tr>
     </tbody>
 </table>
+
+<form th:if="${#authentication.principal.editor}" class="row g-3" th:action="@{../api/book/new}" method="get">
+    <div>
+        <button type="submit" value="Submit" class="btn btn-primary btn-lg m-3">Add new book</button>
+    </div>
+</form>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
