--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <div id="navbar" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid me-2">
             <a class="navbar-brand" href="books.html" th:href="@{/api/books}">BookShop</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -21,7 +21,7 @@
                         <a class="nav-link" sec:authentication="principal.usernameAndRole"></a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
+                <form class="d-flex mx-2" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
