--- a/src/main/resources/templates/book-form.html
+++ b/src/main/resources/templates/book-form.html
@@ -1,13 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bookshop</title>
-    <link rel="icon" type="image/png" href="https://icons8.com/icon/37917/open-book">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+<head th:replace="fragments/base :: baseHead((title = 'Bookshop new book'))"></head>
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
