--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -1,22 +1,6 @@
 <!doctype html>
 <html lang="en">
-
-<head th:replace="fragments/base :: baseHead(~{::title})">
-    <title>Bookshop</title>
-</head>
-
-<!--TODO: delete on next commit-->
-<!--<head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <title>Bookshop</title>-->
-<!--    <link rel="icon" href="https://img.icons8.com/ios/256/open-book&#45;&#45;v1.png">-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"-->
-<!--          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">-->
-<!--    <script src="https://kit.fontawesome.com/ad9809c437.js" crossorigin="anonymous"></script>-->
-<!--    <script src="../webjars/jquery/3.6.3/jquery.min.js"></script>-->
-<!--    <script type="text/javascript" src="../webjars/bootstrap/5.2.3/js/bootstrap.js"></script>-->
-<!--</head>-->
+<head th:replace="fragments/base :: baseHead()"></head>
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
