--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -32,8 +32,11 @@
         <td th:text="${book.price}"></td>
         <td th:if="${#authentication.principal.editor}">
             <div>
-                <i class="fa-solid fa-pen-to-square fa-2x mx-4"></i>
-                <a class="link-delete"
+                <a class="link-edit darkgreen"
+                   th:href="@{'book/edit/' + ${book.id}}"
+                   th:bookId="${book.id}">
+                    <i class="fa-solid fa-pen-to-square fa-2x mx-4" title="Edit this book"></i></a>
+                <a class="link-delete brown"
                    th:href="@{'book/delete/' + ${book.id}}"
                    th:bookId="${book.id}">
                     <i class="fa-solid fa-trash fa-2x" title="Delete this book"></i></a>
