--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,16 +6,11 @@
     <meta name="author" content="">
     <title>Bookshop sign up</title>
     <link rel="icon" href="https://img.icons8.com/ios/256/open-book--v1.png">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #3e3e3e;
-            color: white;
-        }
-    </style>
 </head>
-<body>
+<body class="login">
 <div class="container">
     <form class="form-signin" method="post" action="/registration">
         <h2 class="form-signin-heading text-center">Sign up to Bookshop</h2>
