--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,13 +4,22 @@
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
+
+<div th:if="${message != null}" class="alert alert-success text-center m-3">
+    [[${message}]]
+</div>
+<div th:if="${error != null}" class="alert alert-danger text-center m-3">
+    [[${error}]]
+</div>
+
 <table class="table">
     <thead>
     <tr>
         <th scope="col">Login</th>
         <th scope="col">Role</th>
         <th scope="col">Not locked</th>
-        <th scope="col">Password</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
@@ -18,10 +27,59 @@
             <td th:text="${user.login}"></td>
             <td th:text="${user.role}"></td>
             <td th:text="${user.accountNonLocked}"></td>
-            <td th:text="${user.password}"></td>
+            <td>
+                <button th:if="${user.admin}"
+                        type="submit" value="Submit"
+                        class="btn btn-secondary btn-sm disabled">Change role</button>
+                <form th:if="${!user.admin}"
+                      th:action="@{'user/togglerole/' + ${user.login}}"
+                      th:method="PUT">
+                        <button type="submit" value="Submit"
+                        class="btn btn-primary btn-sm">Change role</button>
+                </form>
+            </td>
+            <td>
+                <i th:if="${user.admin}" class="fa-solid fa-trash fa-2x gray"></i>
+                <a th:if="${!user.admin}" class="link-delete brown"
+                   th:href="@{'user/delete/' + ${user.login}}"
+                   th:userLogin="${user.login}">
+                <i class="fa-solid fa-trash fa-2x" title="Delete this user"></i></a></td>
         </tr>
     </tbody>
 </table>
+
+<div class="modal fade text-center" id="confirmModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Delete confirmation</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" title="Close"></button>
+            </div>
+
+            <div class="modal-body">
+                <span id="confirmText">Are you sure you want to delete this user?</span>
+            </div>
+
+            <div class="modal-footer">
+                <a href="" class="btn btn-success" id="yesButton">Yes</a>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".link-delete").on("click", function (e) {
+            e.preventDefault();
+            link = $(this);
+            userLogin = link.attr("userLogin");
+            $("#yesButton").attr("href", link.attr("href"));
+            $("#confirmText").text("Are you sure you want to delete this user with login: " + userLogin + "?");
+            $("#confirmModal").modal('show');
+        })
+    })
+</script>
 
 </body>
 </html>
