--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,16 @@
     color: darkgreen;
 }
 
+.darkgreen:hover {
+    color: darkolivegreen;
+}
+
 .brown {
     color: brown;
+}
+
+.brown:hover {
+    color: darkred;
 }
 
 .gray {
