--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head th:replace="fragments/base :: baseHead()"></head>
+<head th:replace="~{fragments/base :: baseHead()}"></head>
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
@@ -33,9 +33,8 @@
                         class="btn btn-secondary btn-sm disabled">Change role</button>
                 <form th:if="${!user.admin}"
                       th:action="@{'user/togglerole/' + ${user.login}}"
-                      th:method="PUT">
-                        <button type="submit" value="Submit"
-                        class="btn btn-primary btn-sm">Change role</button>
+                      th:method="POST">
+                        <button type="submit" value="Submit" class="btn btn-primary btn-sm">Change role</button>
                 </form>
             </td>
             <td>
