--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -4,10 +4,7 @@
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
-
-<div th:if="${message != null}" class="alert alert-success text-center m-3">
-    [[${message}]]
-</div>
+<div th:insert="~{fragments/navbar :: #message}"></div>
 
 <table class="table">
     <thead>
