--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -4,13 +4,7 @@
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
-
-<div th:if="${message != null}" class="alert alert-success text-center m-3">
-    [[${message}]]
-</div>
-<div th:if="${error != null}" class="alert alert-danger text-center m-3">
-    [[${error}]]
-</div>
+<div th:insert="~{fragments/navbar :: #message}"></div>
 
 <table class="table">
     <thead>
@@ -35,11 +29,11 @@
             <div>
                 <a class="darkgreen"
                    th:href="@{'book/edit/' + ${book.id}}"
-                   th:bookId="${book.id}">
+                   th:entityId="${book.id}">
                     <i class="fa-solid fa-pen-to-square fa-2x mx-4" title="Edit this book"></i></a>
                 <a class="link-delete brown"
                    th:href="@{'book/delete/' + ${book.id}}"
-                   th:bookId="${book.id}">
+                   th:entityId="${book.id}">
                     <i class="fa-solid fa-trash fa-2x" title="Delete this book"></i></a>
             </div>
         </td>
@@ -64,38 +58,10 @@
     </div>
 </form>
 
-<div class="modal fade text-center" id="confirmModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Delete confirmation</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" title="Close"></button>
-            </div>
+<div th:insert="~{fragments/modal :: #confirmModal}"></div>
 
-            <div class="modal-body">
-                <span id="confirmText">Are you sure you want to delete this book?</span>
-            </div>
-
-            <div class="modal-footer">
-                <a href="" class="btn btn-success" id="yesButton">Yes</a>
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $(".link-delete").on("click", function (e) {
-            e.preventDefault();
-            link = $(this);
-            bookId = link.attr("bookId");
-            $("#yesButton").attr("href", link.attr("href"));
-            $("#confirmText").text("Are you sure you want to delete this book with Id: " + bookId + "?");
-            $("#confirmModal").modal('show');
-        })
-    })
-</script>
+<script type="text/javascript" th:src="@{/js/delete-book.js}"></script>
+<script type="text/javascript" th:src="@{/js/show-modal.js}"></script>
 
 </body>
 </html>
