--- a/src/main/resources/templates/shopping-cart.html
+++ b/src/main/resources/templates/shopping-cart.html
@@ -4,10 +4,7 @@
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
-
-<div th:if="${error != null}" class="alert alert-danger text-center m-3">
-    [[${error}]]
-</div>
+<div th:insert="~{fragments/navbar :: #message}"></div>
 
 <table class="table"
     th:if="${notEmpty}">
@@ -48,37 +45,9 @@
     </div>
 </form>
 
-<div class="modal fade text-center" id="confirmModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Create order confirmation</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" title="Close"></button>
-            </div>
+<div th:insert="~{fragments/modal :: #confirmModalOrder}"></div>
 
-            <div class="modal-body">
-                <span id="confirmText">Are you sure you want to create order from your shopping cart?</span>
-            </div>
-
-            <div class="modal-footer">
-                <a href="" class="btn btn-success" id="yesButton">Yes</a>
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $(".place-order").on("click", function (e) {
-            e.preventDefault();
-            link = $(this);
-            $("#yesButton").attr("href", link.attr("href"));
-            $("#confirmText").text("Are you sure you want to create order from your shopping cart?");
-            $("#confirmModal").modal('show');
-        })
-    })
-</script>
+<script type="text/javascript" th:src="@{/js/place-order.js}"></script>
 
 </body>
 </html>
