--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,13 +4,7 @@
 <body>
 
 <div th:insert="~{fragments/navbar :: #navbar}"></div>
-
-<div th:if="${message != null}" class="alert alert-success text-center m-3">
-    [[${message}]]
-</div>
-<div th:if="${error != null}" class="alert alert-danger text-center m-3">
-    [[${error}]]
-</div>
+<div th:insert="~{fragments/navbar :: #message}"></div>
 
 <table class="table">
     <thead>
@@ -47,38 +41,9 @@
     </tbody>
 </table>
 
-<div class="modal fade text-center" id="confirmModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Delete confirmation</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" title="Close"></button>
-            </div>
+<div th:insert="~{fragments/modal :: #confirmModalDeleteUser}"></div>
 
-            <div class="modal-body">
-                <span id="confirmText">Are you sure you want to delete this user?</span>
-            </div>
-
-            <div class="modal-footer">
-                <a href="" class="btn btn-success" id="yesButton">Yes</a>
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $(".link-delete").on("click", function (e) {
-            e.preventDefault();
-            link = $(this);
-            userLogin = link.attr("userLogin");
-            $("#yesButton").attr("href", link.attr("href"));
-            $("#confirmText").text("Are you sure you want to delete this user with login: " + userLogin + "?");
-            $("#confirmModal").modal('show');
-        })
-    })
-</script>
+<script type="text/javascript" th:src="@{/js/delete-user.js}"></script>
 
 </body>
 </html>
