Delete extra confirmation modal dialogs

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -41,7 +41,7 @@
     </tbody>
 </table>
 
-<div th:insert="~{fragments/modal :: #confirmModalDeleteUser}"></div>
+<div th:insert="~{fragments/modal :: #confirmModal}"></div>
 
 <script type="text/javascript" th:src="@{/js/delete-user.js}"></script>
 
