--- a/src/main/resources/templates/shopping-cart.html
+++ b/src/main/resources/templates/shopping-cart.html
@@ -45,7 +45,7 @@
     </div>
 </form>
 
-<div th:insert="~{fragments/modal :: #confirmModalOrder}"></div>
+<div th:insert="~{fragments/modal :: #confirmModal}"></div>
 
 <script type="text/javascript" th:src="@{/js/place-order.js}"></script>
 
